docs/website: Fix ecosystem tile size and alignment
The boxes on the ecosystem page were different sizes. To fix this
I set the min-wdith to inherit which should make it flexible for
future re-designs. I also fixed the text alignment issue.

This work was done in conjunction with @anderseknert via slack

Fixes #3875

--- a/docs/website/static/css/support.css
+++ b/docs/website/static/css/support.css
@@ -2,6 +2,8 @@
     border-radius: 20px;
     box-shadow: 2px 3px 6px rgba(51, 51, 51, 0.25);
     cursor: pointer;
+    min-width: inherit;
+    text-align: center;
 }
 
 .card-body {
